[tool.poetry]
name = "nano-askllm"
version = "0.2.3"
description = "Unofficial implementation of the Ask-LLM paper 'How to Train Data-Efficient LLMs', arXiv:2402.09668."
authors = ["Susumu OTA <1632335+susumuota@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/susumuota/nano-askllm"
repository = "https://github.com/susumuota/nano-askllm"
documentation = "https://github.com/susumuota/nano-askllm#readme"
keywords = ["transformers", "llm", "large language model", "pre-training", "language model"]
classifiers = ["Topic :: Software Development :: Libraries :: Python Modules"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.0"
transformers = "^4.38.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.2.0"
isort = "^5.13.2"
pytest = "^8.0.2"
pytest-watch = "^4.2.0"
jupyterlab = "^4.1.4"
datasets = "^2.18.0"
sentencepiece = "^0.2.0"
protobuf = "^5.26.0"
accelerate = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
